# regretti

./: .gitignore  Cargo.toml  README.md
examples/: colors.reg  firstclass.reg  fsa.reg  if_else.reg  infinite.reg  loop.reg  parallel.reg
src/: main.rs
src/core/: builtins.rs  junction.rs  lexer.rs  memory.rs  messages.rs  mod.rs  parser.rs  states.rs  tokens.rs
src/utils/: banner
tests/: assign.reg  math.reg  prints.reg
